Moderate Updates\r\n+fix to use python 2.7\r\n+fix to dump data into directory of files using dates.\r\n+fix cron-job.

--- a/settings.cfg
+++ b/settings.cfg
@@ -1,20 +1,20 @@
 [temp_sensor]
-	sensor_name=basement
-	temp_min=32
-	temp_max=99
+sensor_name=basement
+temp_min=32
+temp_max=99
 [notification_from]
-	mail_username=my.email@gmail.com
-	mail_password=rubytuesday
-	mail_server_smtp=smtp.gmail.com
-	mail_server_smtp_port=587
-	mail_subject=Temp Sensor Notice
+mail_username=service.acct@gmail.com
+mail_password=my_password
+mail_server_smtp=smtp.gmail.com
+mail_server_smtp_port=587
+mail_subject=Temp Sensor Notice
 [notification_to]
-	mail_recipients=mr.maggo@gmail.com
+mail_recipients=me@gmail.com
 [logs]
-	data_file=test.json
-	data_format=JSON
+data_directory=data
+data_format=JSON
 [notifications]
-	error_wait_hours=24
-	report_wait_hours=1
+error_wait_hours=24
+report_wait_hours=1
 [production]
-	debug_mode: false
+debug_mode=false
