--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>raspberry-pi-python-temp-sensor</name>
+	<name>python-temp-sensor</name>
 	<comment></comment>
 	<projects>
 	</projects>
