--- a/settings.cfg
+++ b/settings.cfg
@@ -3,8 +3,8 @@ sensor_name=basement
 temp_min=32
 temp_max=99
 [notification_from]
-mail_username=service.acct@gmail.com
-mail_password=my_password
+mail_username=user@gmail.com
+mail_password=password
 mail_server_smtp=smtp.gmail.com
 mail_server_smtp_port=587
 mail_subject=Temp Sensor Notice
@@ -17,4 +17,4 @@ data_format=JSON
 error_wait_hours=24
 report_wait_hours=1
 [production]
-debug_mode=true
+debug_mode=false
