--- a/settings.cfg
+++ b/settings.cfg
@@ -1,5 +1,5 @@
 [temp_sensor]
-sensor_name=basement
+sensor_name=sensor-1
 temp_min=32
 temp_max=99
 [notification_from]
@@ -17,4 +17,4 @@ data_format=JSON
 error_wait_hours=24
 report_wait_hours=1
 [production]
-debug_mode=false
+debug_mode=true
